tests/checker/bad/bad_init.scilla
scilla_version 0

contract BadInit
(
  required_signatures : Uint32
)

